Fixed some layout issues

--- a/front_end/src/styles.css
+++ b/front_end/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import url("../node_modules/bootstrap/dist/css/bootstrap.min.css"); */
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css");
+
+.center {
+    margin: 0 auto;
+}
 
 body {
     margin: 10px;
